Add hover colors to the bottons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <div>
-    <a class="btn" href="#">Warning button</a>
+    <a class="btn btn-warning" href="#">Warning button</a>
   </div>
 
   <div>
